--- a/infoshop/templates/infoshop/tpl_product_wall.html
+++ b/infoshop/templates/infoshop/tpl_product_wall.html
@@ -7,10 +7,7 @@
 {#                                 style="background-image: linear-gradient(to bottom left, {{ product.color0 }} 0%, {{ product.color1 }} 50%, {{ product.color2 }} 100%);"#}
 {#                            ></div>#}
             <div class="oko-pwall-content">
-                <div class="oko-pwall-badges">
-                    <div class="oko-pwall-badge oko-pwall-badge__orange">Вернём 7%</div>
-
-                </div>
+                {% include 'infoshop/tpl_product_bages.html' %}
                 <div class="oko-pwall-title-raw">
                     <div class="oko-pwall-title-padding"></div>
                     <div class="oko-pwall-title">
