--- a/infoshop/templates/infoshop/product.html
+++ b/infoshop/templates/infoshop/product.html
@@ -77,7 +77,7 @@
                         {% endif %}
                         <div class="text-center">
                             <a class="btn btn-success-gradiant btn-md btn-arrow m-t-20" data-toggle="collapse" href="#f43">
-                                <span>{% if product.forfree %}Получить{% else %}Купить{% endif %} {{ product.type.name | lower }} <i class="ti-arrow-right"></i></span>
+                                <span>{% if product.forfree %}Получить{% else %}Купить{% endif %} {{ product.type.accusative | lower }} <i class="ti-arrow-right"></i></span>
                             </a>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                             {% endif %}
                             <li class="nav-item">
                                 <a class="nav-link show" data-toggle="tab" href="#messages7" role="tab" aria-selected="false">
-                                    <span class="hidden-sm-up"><i class="ti-email"></i></span> <span class="hidden-xs-down">Отзывы о {{ product.type.prepositional | lower }}</span><span class="label label-success ml-2">12</span>
+                                    <span class="hidden-sm-up"><i class="ti-email"></i></span> <span class="hidden-xs-down">Отзывы</span><span class="label label-success ml-2">12</span>
                                 </a>
                             </li>
                         </ul>
