--- a/aryks/templates/base.html
+++ b/aryks/templates/base.html
@@ -35,7 +35,7 @@
                 <div class="header6">
                     <div class="container-fluid p-l-20 p-r-20 po-relative bg-dark">
                         <nav class="navbar navbar-expand-lg h6-nav-bar">
-                            <a href="{% url 'pages-root' %}" class="navbar-brand"><img src="{{ STATIC_URL }}wikioko_w60.png" alt="oko.online" /></a>
+                            <a href="{% url 'pages-root' %}" class="navbar-brand"><img src="{{ STATIC_URL }}wikioko_w60y.png" alt="oko.online" /></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#h6-info" aria-controls="h6-info" aria-expanded="false" aria-label="Toggle navigation"><span class="ti-menu"></span></button>
                             <div class="collapse navbar-collapse hover-dropdown font-14 ml-auto" id="h6-info">
                                 <ul class="navbar-nav ml-auto">
