--- a/infoshop/templates/infoshop/tpl_product_wall.html
+++ b/infoshop/templates/infoshop/tpl_product_wall.html
@@ -1,6 +1,6 @@
 {% load thumbnail %}
 <div class="oko-pwall">
-    <div class="oko-pwall-wrap m-l-20 m-r-20 m-b-20" data-aos="flip-left" data-aos-duration="1200">
+    <div class="oko-pwall-wrap oko-accent-rotate m-l-20 m-r-20 m-b-20">
         <div class="oko-pwall-link lazybg loaded-bg"
            style="background-image: url({{ product.image|thumbnail_url:'product_list' }});">
 {#                            <div class="oko-pwall-filter" #}
