--- a/aryks/templates/base.html
+++ b/aryks/templates/base.html
@@ -9,6 +9,7 @@
         <link href="{{ STATIC_URL }}assets/node_modules/bootstrap/css/bootstrap-reboot.css" rel="stylesheet">
         <link href="{{ STATIC_URL }}assets/node_modules/bootstrap/css/bootstrap-grid.css" rel="stylesheet">
         <link href="{{ STATIC_URL }}assets/node_modules/bootstrap/css/bootstrap.css" rel="stylesheet">
+        <link href="{{ STATIC_URL }}assets/node_modules/aos/css/aos.css" rel="stylesheet">
 
         <!-- Custom CSS -->
         <link href="{{ STATIC_URL }}wrapkit/css/style.css" rel="stylesheet">
@@ -80,25 +81,27 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 m-b-30">
-                            <h5 class="m-b-20">Address</h5>
-                            <p>71 Amsteroum Avenue Cronish Night, NY 35098</p>
+                            <a href="{% url 'pages-root' %}" class="navbar-brand"><img src="{{ STATIC_URL }}wikioko_60.png" alt="oko.online" /></a><br>
+                            <sup>Онлайн-курсы, видеоуроки, тренинги</sup>
                         </div>
                         <div class="col-lg-3 col-md-6 m-b-30">
-                            <h5 class="m-b-20">Phone</h5>
-                            <p>Reception :  +205 123 4567 <br/>Office :  +207 235 7890</p>
                         </div>
-                        <div class="col-lg-3 col-md-6 m-b-30">
-                            <h5 class="m-b-20">Email</h5>
-                            <p>Office :  <a href="#" class="link">info@wrappixel.com</a> <br/>Site :  <a href="#" class="link">wrapkit@wrappixel.com</a></p>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <h5 class="m-b-20">Social</h5>
-                            <div class="round-social light">
-                                <a href="#" class="link"><i class="fa fa-facebook"></i></a>
-                                <a href="#" class="link"><i class="fa fa-twitter"></i></a>
-                                <a href="#" class="link"><i class="fa fa-google-plus"></i></a>
-                                <a href="#" class="link"><i class="fa fa-youtube-play"></i></a>
-                                <a href="#" class="link"><i class="fa fa-instagram"></i></a>
+                        <div class="col-lg-6 m-b-30">
+                            <h5 class="m-b-20">Контакты</h5>
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-lg-6 m-b-30">
+                                        <p><i class="fa oko-icon-contact fa-envelope-o"></i> <a href="mailto:mail@wikioko.com" class="link">mail@wikioko.com</a></p>
+                                        <p><i class="fa oko-icon-contact fa-phone"></i> <a href="tel:+79876543210" class="link">+7 987 654-32-10</a></p>
+                                        <p><i class="fa oko-icon-contact fa-clock-o"></i> 8:00 - 17:00 <br/>
+                                            <i class="oko-icon-contact">&nbsp;</i>Europe/Moscow
+                                        </p>
+                                    </div>
+                                    <div class="col-lg-6 ">
+                                        <p><i class="fa oko-icon-contact fa-send"></i> <a href="tel:+79876543210" class="link">+7 987 654-32-10</a></p>
+                                        <p><i class="fa oko-icon-contact fa-whatsapp"></i> <a href="tel:+79876543210" class="link">+7 987 654-32-10</a></p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -106,11 +109,11 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="d-flex font-14">
-                                    <div class="m-t-10 m-b-10 copyright">All Rights Reserved by WrapPixel.</div>
+                                    <div class="m-t-10 m-b-10 copyright">&#0169; 2019, WikiOko</div>
                                     <div class="links ml-auto m-t-10 m-b-10">
-                                        <a href="#" class="p-10 p-l-0">Terms of Use</a>
-                                        <a href="#" class="p-10">Legal Disclaimer</a>
-                                        <a href="#" class="p-10">Privacy Policy</a>
+                                        <a href="#" class="p-10 p-l-0">Публичная оферта</a>
+                                        <a href="#" class="p-10">Реквизиты</a>
+                                        <a href="#" class="p-10">Использование Cookie</a>
                                     </div>
                                 </div>
                             </div>
@@ -138,6 +141,10 @@
         <!-- ============================================================== -->
         <!-- This page plugins -->
         <!-- ============================================================== -->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
         <script>
             $('a').on('click', function (event) {
                 var $anchor = $(this);
