--- a/infoshop/templates/infoshop/product.html
+++ b/infoshop/templates/infoshop/product.html
@@ -13,10 +13,10 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-xl-3 col-lg-4">
+            <div class="col-xxl-3 col-xl-4 col-lg-6">
                 {% include 'infoshop/tpl_product_wall.html' %}
             </div>
-            <div class="col-xl-6 col-lg-8 p-4">
+            <div class="col-xxl-9 col-xl-8 col-lg-6 p-4">
                 {% include 'infoshop/tpl_breadcrumbs.html' %}
 
                 <h1 class="mt-3">{{ product.pagetitle }}</h1>
@@ -46,7 +46,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-3 col-lg-6 p-4">
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-xxl-3 col-xl-4 p-4" style="max-width: 420px;">
                 <div class="card card-outline-inverse card-shadow">
 {#                                <div class="card-header">#}
 {#                                    <h4 class="m-b-0 text-white"></h4>#}
@@ -54,7 +56,7 @@
                     <div class="card-body">
                         {% if product.forfree %}
                             <div class="h3 my-3"><span class="h1 font-weight-bold text-success">Бесплатно</span></div>
-                            <p class="card-text">Вы сможете получить доступ к {{ product.type.name_dative }} сразу после регистрации на сайте.</p>
+                            <p class="card-text">Вы сможете получить доступ к {{ product.type.name_dative | lower }} сразу после регистрации на сайте.</p>
                         {% elif offers %}
                             <h3>Стоимость {{ product.type.name_genitive }}:</h3>
                             <div class="h3 my-3">от <span class="h1 font-weight-bold text-success">{{ price }}-</span></div>
@@ -91,11 +93,11 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-9">
+{#        </div>#}
+{#    </div>#}
+{#    <div class="container">#}
+{#        <div class="row">#}
+            <div class="col-xxl-9 col-xl-8 ">
                 <div class="card">
                     <div class="card-body p-b-0">
                         <!-- Nav tabs -->
