--- a/infoshop/templates/infoshop/tpl_product_list.html
+++ b/infoshop/templates/infoshop/tpl_product_list.html
@@ -3,7 +3,7 @@
     <div class="row">
         {% for product in products %}
             <div class="oko-pcard">
-                <div class="oko-pcard-wrap m-l-20 m-r-20 m-b-20" data-aos="flip-left" data-aos-duration="1200">
+                <div class="oko-pcard-wrap m-l-20 m-r-20 m-b-20">
                     <a class="oko-pcard-link lazybg loaded-bg"
                        href="{% url 'infoshop:product_detail' product.slug %}" tabindex="0"
                        style="background-image: url({{ product.image | thumbnail_url:'product_list' }});">
