--- a/oko_authors/templates/oko_authors/authors_list.html
+++ b/oko_authors/templates/oko_authors/authors_list.html
@@ -12,16 +12,16 @@
                 </div>
             </div>
             <div class="col-xl-6 col-lg-8 p-40">
-                {% include 'infoshop/tpl_breadcrumbs.html' %}
+                {% include 'oko_authors/tpl_breadcrumbs.html' %}
 
-                <h1 class="">{{ category.name }}</h1>
-                <div class="m-t-20">{{ category.description }}</div>
+                <h1 class="">{{ category.pagetitle_authors }}</h1>
+                <div class="m-t-20">{{ category.description_authors | linebreaks}}</div>
                 {% if category_children %}
                     <div class="oko-link-group m-t-30">
                         {% for c in category_children %}
                             {% if c.num_products %}
-                            <a href="{% url 'infoshop:by_category' c.slug %}"
-                               class="oko-link oko-link-category">{{ c.menutitle }}<sup class="label label-inverse">{{ c.num_products }}</sup></a>
+                            <a href="{% url 'oko_authors:by_category' c.slug %}"
+                               class="oko-link oko-link-category">{{ c.menutitle }}</a>
                             {% endif %}
                         {% endfor %}
                     </div>
@@ -34,6 +34,6 @@
             <div class="col-1 oko-stripe" style="background-color: {{ category.color2 }};"></div>
         </div>
     </div>
-    {% include 'infoshop/tpl_product_list.html' %}
+    {% include 'oko_authors/tpl_authors_list.html' %}
 
 {% endblock content %}
