--- a/aryks/static/wrapkit/scss/app.scss
+++ b/aryks/static/wrapkit/scss/app.scss
@@ -525,6 +525,14 @@ Text Colors
     text-fill-color:transparent;
 }
 
+.text-danger-gradiant{
+    @include linear-gradient (to right, $warning 0%, $danger 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-fill-color:transparent;
+}
+
 html body {
     .text-blue {
         color: $blue;
