--- a/aryks/static/wrapkit/scss/screen.scss
+++ b/aryks/static/wrapkit/scss/screen.scss
@@ -40,6 +40,12 @@ sup.label {
   vertical-align: super;
 }
 
+.bg-scroll {
+  background-position: center top;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 .wall {
   min-height: 600px;
   display: flex;
@@ -506,6 +512,33 @@ sup.label {
   min-height: .3rem;
 }
 
+
+.oko-promo {
+  h1 {
+    font-size: 5rem;
+    line-height: 6rem;
+  }
+  h2 {
+    font-size: 4rem;
+    line-height: 5rem;
+  }
+  h3 {
+    font-size: 3rem;
+    line-height: 4rem;
+  }
+  h4 {
+    font-size: 2rem;
+    line-height: 3rem;
+  }
+  h5 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+  h6 {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+  }
+}
 
 .oko-icon-contact {
   width: 1.4rem;
