--- a/aryks/templates/base.html
+++ b/aryks/templates/base.html
@@ -12,6 +12,7 @@
         <link href="{{ STATIC_URL }}assets/node_modules/aos/css/aos.css" rel="stylesheet">
 
         <!-- Custom CSS -->
+        <link href="{{ STATIC_URL }}wrapkit/css/iconmind.css" rel="stylesheet">
         <link href="{{ STATIC_URL }}wrapkit/css/style.css" rel="stylesheet">
         <link href="{{ STATIC_URL }}wrapkit/css/index-landingpage/landing-page.css" rel="stylesheet">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -81,8 +82,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 m-b-30">
-                            <a href="{% url 'pages-root' %}" class="navbar-brand"><img src="{{ STATIC_URL }}wikioko_60.png" alt="oko.online" /></a><br>
-                            <sup>Онлайн-курсы, видеоуроки, тренинги</sup>
+                            <a href="{% url 'pages-root' %}" class="navbar-brand"><img src="{{ STATIC_URL }}oko_logo_bird_180.png" alt="wikioko" /></a><br>
+                            <sup>Онлайн-обучение от популярных <br>авторов и онлайн-школ</sup>
                         </div>
                         <div class="col-lg-3 col-md-6 m-b-30">
                         </div>
@@ -91,13 +92,19 @@
                             <div class="container-fluid">
                                 <div class="row">
                                     <div class="col-lg-6 m-b-30">
-                                        <p><i class="fa oko-icon-contact fa-envelope-o"></i> <a href="mailto:mail@wikioko.com" class="link">mail@wikioko.com</a></p>
-                                        <p><i class="fa oko-icon-contact fa-phone"></i> <a href="tel:+79876543210" class="link">+7 987 654-32-10</a></p>
-                                        <p><i class="fa oko-icon-contact fa-clock-o"></i> 8:00 - 17:00 <br/>
-                                            <i class="oko-icon-contact">&nbsp;</i>Europe/Moscow
+                                        <p>Тех. поддержка:
+                                            <br><i class="fa oko-icon-contact fa-envelope-o"></i> <a href="mailto:support@wikioko.com" class="link">support@wikioko.com</a>
+                                            <br><i class="fa oko-icon-contact fa-phone"></i> <a href="tel:+79876543210" class="link">+7 987 654-32-10</a>
+                                        </p>
+                                        <p>Бухгалтерия:
+                                            <br><i class="fa oko-icon-contact fa-envelope-o"></i> <a href="mailto:coin@wikioko.com" class="link">coin@wikioko.com</a>
+                                            <br><i class="fa oko-icon-contact fa-phone"></i> <a href="tel:+79876543210" class="link">+7 987 654-32-10</a>
                                         </p>
                                     </div>
                                     <div class="col-lg-6 ">
+                                        <p><i class="fa oko-icon-contact fa-clock-o"></i> 8:00 - 17:00 <br/>
+                                            <i class="oko-icon-contact">&nbsp;</i>Europe/Moscow
+                                        </p>
                                         <p><i class="fa oko-icon-contact fa-send"></i> <a href="tel:+79876543210" class="link">+7 987 654-32-10</a></p>
                                         <p><i class="fa oko-icon-contact fa-whatsapp"></i> <a href="tel:+79876543210" class="link">+7 987 654-32-10</a></p>
                                     </div>
@@ -109,11 +116,11 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="d-flex font-14">
-                                    <div class="m-t-10 m-b-10 copyright">&#0169; 2019, WikiOko</div>
+                                    <div class="m-t-10 m-b-10 copyright">&#0169; 2019, wikioko</div>
                                     <div class="links ml-auto m-t-10 m-b-10">
                                         <a href="#" class="p-10 p-l-0">Публичная оферта</a>
                                         <a href="#" class="p-10">Реквизиты</a>
-                                        <a href="#" class="p-10">Использование Cookie</a>
+                                        <a href="#" class="p-10">Использование Cookies</a>
                                     </div>
                                 </div>
                             </div>
@@ -155,6 +162,7 @@
                 // code
 
             });
-    </script>
+        </script>
+        {% block js_custom %}{% endblock js_custom %}
     </body>
 </html>
