--- a/aryks/templates/promo.html
+++ b/aryks/templates/promo.html
@@ -3,15 +3,158 @@
 
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
+{% block js_custom %}
+    <script src="{{ STATIC_URL }}wrapkit/js/type.js"></script>
+    <script src="{{ STATIC_URL }}wrapkit/js/jquery.counterup.min.js"></script>
+{#    <script type="text/javascript">#}
+{#    $('.counter').counterUp({delay: 10});#}
+{#    </script>#}
+{% endblock js_custom %}
+
 {% block content %}
-    <div class="bg-light">
-        <section>
-            <div id="banner2" class="banner spacer" style="background-image:url({{ STATIC_URL }}tmp/bg-laptop.jpg);">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-7 col-lg-5 aos-init" data-aos="fade-up" data-aos-duration="1500">
-                            <h2 class="title text-white font-semibold text-uppercase">Стать партнером WikiOko</h2>
-                            <div class="bg-white">
+    <section class="spacer">
+        <div class="container spacer">
+            <!-- Row  -->
+            <div class="row">
+                <!-- Column -->
+                <div class="oko-promo col-md-6 align-self-center" data-aos="fade-right" data-aos-duration="1200">
+                    <h1 class="title"><span class="typewrite" data-period="2000" data-type="[ &quot;Лучшие&quot;, &quot;Полезные&quot;, &quot;Современные&quot;, &quot;Свежие&quot; ]"><span class="wrap"></span></span><br>курсы<br>на <span class="text-megna">wikioko.</span></h1>
+                    <h6 class="subtitle">Качественные онлайн-курсы, тренинги, видеоуроки и книги от популярных авторов и онлайн-школ.</h6>
+                    <a class="btn btn-danger-gradiant btn-md btn-arrow m-t-20 m-b-10" href="{% url 'infoshop:infoshop' %}"><span>Каталог курсов <i class="ti-arrow-right"></i></span></a>
+                    <a class="btn btn-link btn-md btn-arrow m-t-20 m-b-10 font-medium" href="#authors"><span class="underline">Приглашаем авторов <i class="ti-arrow-right"></i></span></a>
+                </div>
+                <!-- Column -->
+                <div class="col-md-6 img-anim" data-aos="fade-up" data-aos-duration="2200">
+                    <img src="{{ STATIC_URL }}assets/images/oko_bird.png" alt="wikioko" class="img-fluid m-t-20">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="spacer bg-light bg-scroll" id="authors" style="background-image:url({{ STATIC_URL }}tmp/authors-bg.jpg)">
+        <div class="container">
+            <!-- Row -->
+            <div class="row justify-content-center">
+                <div class="col-md-7 text-center oko-promo" data-aos="fade-right" data-aos-duration="1200" data-aos-delay="400">
+                    <h2 class="title text-white font-medium">Осталось <span class="text-danger-gradiant font-weight-bold counter">97<i class="icon-Fire-Flame2"></i></span></h2>
+                    <h4 class="title text-white font-medium text-uppercase">приоритетных мест</h4>
+                    <h6 class="font-light text-white op-8">Только 100 первых авторов получат бесплатное приоритетное размещение! Успей стать партнером wikioko на особых условиях.</h6>
+                    <a class="btn btn-danger-gradiant btn-md btn-arrow m-t-20 text-uppercase" href="#register"><span>Стать партнером wikioko <i class="ti-arrow-right"></i></span></a>
+                </div>
+            </div>
+            <!-- Row -->
+        </div>
+    </section>
+    <section class="bg-light spacer feature3">
+        <div class="container">
+            <!-- Row  -->
+            <div class="row justify-content-center">
+                <div class="col-md-7 text-center">
+                    <h2 class="title"><span class="text-megna">wikioko.</span> Зачем это авторам?</h2>
+                    <h6 class="subtitle">Основная наша цель - продавать больше ваших курсов. Партнерство с wikiOko выгодно как индивидуальным авторам, так и школам. Мы открыты для диалога и всегда готовы предоставить вам лучшие условия для сотрудничества.</h6>
+                </div>
+            </div>
+            <!-- Row  -->
+            <div class="row m-t-40">
+                <div class="col-md-6">
+                    <div class="card card-shadow" data-aos="fade-right" data-aos-duration="1200">
+                        <div class="card-body d-flex">
+                            <div class="icon-space align-self-center mx-4"><i class="icon-Student-MaleFemale display-2 text-danger-gradiant"></i></div>
+                            <div class="align-self-center">
+                                <h5 class="font-medium mt-3"><a href="#profit" class="linking">Новые слушатели <i class="ti-arrow-right"></i></a></h5>
+                                <p class="m-t-20">Всё просто, чем больше заинтересованных слушателей мы привлечем, тем больше ваших курсов будет куплено.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card card-shadow" data-aos="fade-left" data-aos-duration="1200">
+                        <div class="card-body d-flex">
+                            <div class="icon-space align-self-center mx-4"><i class="icon-Diamond display-2 text-danger-gradiant"></i></div>
+                            <div class="align-self-center">
+                                <h5 class="font-medium mt-3"><a href="#design" class="linking">Красивая обложка <i class="ti-arrow-right"></i></a></h5>
+                                <p class="m-t-20">Люди любят всё красивое, поэтому мы берем на себя оформление вашего портфолио.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card card-shadow" data-aos="fade-right" data-aos-duration="1200">
+                        <div class="card-body d-flex">
+                            <div class="icon-space align-self-center mx-4"><i class="icon-Shovel display-2 text-danger-gradiant"></i></div>
+                            <div class="align-self-center">
+                                <h5 class="font-medium mt-3"><a href="#coin" class="linking">Без рутины <i class="ti-arrow-right"></i></a></h5>
+                                <p class="m-t-20">Мы полностью отвечаем за прием платежей, уплату налогов и другие заботы, чтобы ничто не отвлекало вас от любимого дела.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card card-shadow" data-aos="fade-left" data-aos-duration="1200">
+                        <div class="card-body d-flex">
+                            <div class="icon-space align-self-center mx-4"><i class="icon-Handshake display-2 text-danger-gradiant"></i></div>
+                            <div class="align-self-center">
+                                <h5 class="font-medium mt-3"><a href="#clear" class="linking">Понятные условия <i class="ti-arrow-right"></i></a></h5>
+                                <p class="m-t-20">Формула долгого успешного партнерства:<br>От вас - качественные обучающие продукты.<br>От нас - понятные условия сотрудничества.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="row" id="profit">
+            <div class="col-lg-6 bg-cover" style="background-image:url({{ STATIC_URL }}assets/images/innerpage/s3.jpg)"></div>
+            <div class="col-lg-6">
+                <div class="side-content both-space" data-aos="fade-left" data-aos-duration="1200">
+                    <span class="text-danger">Новые слушатели</span>
+                    <h2 class="title">Раскрутим ваши курсы</h2>
+                    <p>Более 12 лет в интернет-маркетинге! Такой опыт позволяет нам успешно продвигать в сети проект любой сложности. Вам повезло, что именно мы займемся продвижением ваших курсов. Как результат - вы получите клиентов, готовых платить за качественный обучающий контент.</p>
+                    <a class="btn btn-success-gradiant btn-md btn-arrow m-t-20" data-toggle="collapse" href="#register"><span>Стать партнером <i class="ti-arrow-right"></i></span></a>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="design">
+            <div class="col-lg-6">
+                <div class="side-content both-space text-right pull-right" data-aos="fade-right" data-aos-duration="1200">
+                    <span class="text-danger">Красивая обложка</span>
+                    <h2 class="title">Всё сделаем в лучшем виде</h2>
+                    <p>Мы знаяем, что красивый товар продается гораздо лучше, поэтому талантливый дизайнер - неотъемлемая часть нашей команды. Она займется не только обложками ваших курсов, но и оформлением вашей персональной страницы на <span class="text-megna">wikioko.com</span></p>
+                    <a class="btn btn-success-gradiant btn-md btn-arrow m-t-20" data-toggle="collapse" href="#register"><span>Стать партнером <i class="ti-arrow-right"></i></span></a>
+                </div>
+            </div>
+            <div class="col-lg-6 bg-cover" style="background-image:url({{ STATIC_URL }}assets/images/innerpage/designer.jpg)"></div>
+        </div>
+        <div class="row" id="coin">
+            <div class="col-lg-6 bg-cover" style="background-image:url({{ STATIC_URL }}assets/images/innerpage/s4.jpg)"></div>
+            <div class="col-lg-6">
+                <div class="side-content both-space" data-aos="fade-left" data-aos-duration="1200">
+                    <span class="text-danger">Без рутины</span>
+                    <h2 class="title">Освободим от забот</h2>
+                    <p>Мы понимаем, что создание инфопродуктов - это творческий процесс. А творческих людей нельзя отвлекать, поэтому мы берем на себя всю организационную рутину, от приема платежей до налоговой отчетности.</p>
+                    <a class="btn btn-success-gradiant btn-md btn-arrow m-t-20" data-toggle="collapse" href="#register"><span>Стать партнером <i class="ti-arrow-right"></i></span></a>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="clear">
+            <div class="col-lg-6">
+                <div class="side-content both-space text-right pull-right" data-aos="fade-right" data-aos-duration="1200">
+                    <span class="text-danger">Понятные условия</span>
+                    <h2 class="title">Кристально чисто</h2>
+                    <p>Удобный личный кабинет позволит вам отслеживать статистику и доходы даже со смартфона. Выводите средства удобным вам способом. И, конечно, с каждым нашим партнером мы подписываем понятный договор без мелкого шрифта и звёздочек.</p>
+                    <a class="btn btn-success-gradiant btn-md btn-arrow m-t-20" data-toggle="collapse" href="#register"><span>Стать партнером <i class="ti-arrow-right"></i></span></a>
+                </div>
+            </div>
+            <div class="col-lg-6 bg-cover" style="background-image:url({{ STATIC_URL }}assets/images/innerpage/dashboards.jpg)"></div>
+        </div>
+    </section>
+    <section class="bg-light" id="register">
+        <div id="banner2" class="banner spacer" style="background-image:url({{ STATIC_URL }}tmp/bg-laptop.jpg);">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7 col-lg-5" data-aos="fade-up" data-aos-duration="1500">
+                        <h2 class="title text-white font-semibold text-uppercase">Стать партнером WikiOko</h2>
+                        <div class="bg-white">
 {#                                <div class="form-row b-b">#}
 {#                                    <div class="p-30 left b-r w-50">#}
 {#                                        <label class="text-inverse font-12 text-uppercase">First Name</label>#}
@@ -22,18 +165,18 @@
 {#                                        <input type="text" class="b-0 p-0 font-14 form-control" placeholder="Your Last Name">#}
 {#                                    </div>#}
 {#                                </div>#}
-                                <div class="form-row b-b p-30">
-                                    <label class="text-inverse font-12 text-uppercase">Имя</label>
-                                    <input type="text" class="b-0 p-0 font-14 form-control" placeholder="Напишите ваше имя">
-                                </div>
-                                <div class="form-row b-b p-30">
-                                    <label class="text-inverse font-12 text-uppercase">Email</label>
-                                    <input type="text" class="b-0 p-0 font-14 form-control" placeholder="Ваша электронная почта">
-                                </div>
-                                <div class="form-row b-b p-30">
-                                    <label class="text-inverse font-12 text-uppercase">Телефон</label>
-                                    <input type="text" class="b-0 p-0 font-14 form-control" placeholder="Укажите контактный телефон">
-                                </div>
+                            <div class="form-row b-b p-30">
+                                <label class="text-inverse font-12 text-uppercase">Имя</label>
+                                <input type="text" class="b-0 p-0 font-14 form-control" placeholder="Напишите ваше имя">
+                            </div>
+                            <div class="form-row b-b p-30">
+                                <label class="text-inverse font-12 text-uppercase">Email</label>
+                                <input type="text" class="b-0 p-0 font-14 form-control" placeholder="Ваша электронная почта">
+                            </div>
+                            <div class="form-row b-b p-30">
+                                <label class="text-inverse font-12 text-uppercase">Телефон</label>
+                                <input type="text" class="b-0 p-0 font-14 form-control" placeholder="Укажите контактный телефон">
+                            </div>
 {#                                <div class="form-row b-b p-30 po-relative">#}
 {#                                    <label class="text-inverse font-12 text-uppercase">Booking Date</label>#}
 {#                                    <div class="input-group date">#}
@@ -41,23 +184,19 @@
 {#                                        <label class="" for="dp"><i class="fa fa-calendar"></i></label>#}
 {#                                    </div>#}
 {#                                </div>#}
-                                <div class="form-row b-b p-30">
-                                    <label class="text-inverse font-12 text-uppercase">Комментарий</label>
-                                    <textarea class="b-0 font-light p-0 font-14 form-control" placeholder="Напишите всё, что считаете нужным"></textarea>
-                                </div>
-                                <div>
-                                    <button class="m-0 b-0 p-t-30 p-b-30 font-14 font-semibold bg-danger-gradiant btn btn-block btn-arrow text-center text-white text-uppercase">
-                                        <span>Подать заявку <i class="ti-arrow-right"></i></span>
-                                    </button>
-                                </div>
+                            <div class="form-row b-b p-30">
+                                <label class="text-inverse font-12 text-uppercase">Комментарий</label>
+                                <textarea class="b-0 font-light p-0 font-14 form-control" placeholder="Напишите всё, что считаете нужным"></textarea>
+                            </div>
+                            <div>
+                                <button class="m-0 b-0 p-t-30 p-b-30 font-14 font-semibold bg-danger-gradiant btn btn-block btn-arrow text-center text-white text-uppercase">
+                                    <span>Подать заявку <i class="ti-arrow-right"></i></span>
+                                </button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
-    <div class="container mt-5">
-	{% placeholder "content" %}
-    </div>
+        </div>
+    </section>
 {% endblock content %}
