--- a/aryks/templates/register.html
+++ b/aryks/templates/register.html
@@ -9,7 +9,7 @@
             <div id="banner2" class="banner spacer" style="background-image:url({{ STATIC_URL }}tmp/bg-laptop.jpg);">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-7 col-lg-5 aos-init" data-aos="fade-up" data-aos-duration="1500">
+                        <div class="col-md-7 col-lg-5" data-aos="fade-up" data-aos-duration="1500">
                             <h2 class="title text-white font-semibold text-uppercase">Стать партнером WikiOko</h2>
                             <div class="bg-white">
 {#                                <div class="form-row b-b">#}
