Update authors list

--- a/aryks/static/wrapkit/scss/screen.scss
+++ b/aryks/static/wrapkit/scss/screen.scss
@@ -801,7 +801,8 @@ sup.label {
 //// Owners
 
 .oko-acard {
-  text-align: center;
+  //text-align: center;
+  padding: 1rem 1.5rem;
   width: 100%;
 }
 
@@ -846,3 +847,5 @@ sup.label {
     width: 12.5%;
   }
 }
+
+
