--- a/aryks/static/wrapkit/scss/style.scss
+++ b/aryks/static/wrapkit/scss/style.scss
@@ -25,6 +25,7 @@ File: scss
 @import '../scss/icons/simple-line-icons/css/simple-line-icons.css';
 @import '../scss/icons/themify-icons/themify-icons.css';
 @import 'app.scss';
+@import '_headers.scss';
 @import 'common.scss';
 @import 'responsive.scss';
 @import "screen.scss";
