--- a/aryks/templates/promo.html
+++ b/aryks/templates/promo.html
@@ -3,6 +3,10 @@
 
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
+{% block header %}
+{% include 'tpl_header.html' with bg_class=' ' bar_class='topbar' nav_index=1 logo='b' %}
+{% endblock header %}
+
 {% block js_custom %}
     <script src="{{ STATIC_URL }}wrapkit/js/type.js"></script>
     <script src="{{ STATIC_URL }}wrapkit/js/jquery.counterup.min.js"></script>
@@ -18,7 +22,7 @@
             <div class="row">
                 <!-- Column -->
                 <div class="oko-promo col-md-6 align-self-center" data-aos="fade-right" data-aos-duration="1200">
-                    <h1 class="title"><span class="typewrite" data-period="2000" data-type="[ &quot;Лучшие&quot;, &quot;Полезные&quot;, &quot;Современные&quot;, &quot;Свежие&quot; ]"><span class="wrap"></span></span><br>курсы<br>на <span class="text-megna">wikioko.</span></h1>
+                    <h1 class="title"><span class="typewrite" data-period="2000" data-type="[ &quot;Лучшие&quot;, &quot;Полезные&quot;, &quot;Актуальные&quot;, &quot;Свежие&quot; ]"><span class="wrap"></span></span><br>курсы<br>на <span class="text-megna">wikioko.</span></h1>
                     <h6 class="subtitle">Качественные онлайн-курсы, тренинги, видеоуроки и книги от популярных авторов и онлайн-школ.</h6>
                     <a class="btn btn-danger-gradiant btn-md btn-arrow m-t-20 m-b-10" href="{% url 'infoshop:infoshop' %}"><span>Каталог курсов <i class="ti-arrow-right"></i></span></a>
                     <a class="btn btn-link btn-md btn-arrow m-t-20 m-b-10 font-medium" href="#authors"><span class="underline">Приглашаем авторов <i class="ti-arrow-right"></i></span></a>
